Fixed database switch from SQLite to PostgreSQL

--- a/mysite/Dockerfile
+++ b/mysite/Dockerfile
@@ -5,13 +5,17 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
+# Install netcat
+RUN apt-get update && apt-get install -y netcat-openbsd
+
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app/
 
-RUN python manage.py migrate
+# Make entrypoint script executable
+RUN chmod +x entrypoint.sh
 
 EXPOSE 8000
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["./entrypoint.sh"]
