--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,12 @@ version: '3.8'
 
 services:
   web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    build: ./mysite
+    command: ["./entrypoint.sh", "python", "manage.py", "runserver", "0.0.0.0:8000"]
     ports:
       - "8012:8000"
     volumes:
-      - .:/app
+      - ./mysite:/app
     depends_on:
       - db
     environment:
