--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
       - DJANGO_SUPERUSER_USERNAME=admin
       - DJANGO_SUPERUSER_EMAIL=admin@example.com
       - DJANGO_SUPERUSER_PASSWORD=zzbc1234
+      - CELERY_BROKER_URL=redis://redis:6379/0
 
   db:
     image: postgres:latest
@@ -35,5 +36,21 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
+  celery:
+    build: ./mysite
+    command: celery -A mysite worker --loglevel=info
+    depends_on:
+      - redis
+    volumes:
+      - ./mysite:/app
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+
 volumes:
   postgres_data:
