--- a/mysite/Dockerfile
+++ b/mysite/Dockerfile
@@ -12,10 +12,11 @@ COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app/
+WORKDIR /app
 
+COPY entrypoint.sh /entrypoint.sh
 # Make entrypoint script executable
 RUN chmod +x entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
-EXPOSE 8000
-
-CMD ["./entrypoint.sh"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
