--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -13,3 +13,10 @@ spec:
               name: mysite-service
               port:
                 number: 80
+        - path: /grafana
+          pathType: Prefix
+          backend:
+            service:
+              name: grafana-service
+              port:
+                number: 3000
