--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
     - name: Set up Independencies for coverage report
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install coverage
 
     # - name: Set up Node.js
