--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install coverage
+      working-directory: ./mysite
 
     # - name: Set up Node.js
     #   uses: actions/setup-node@v2
