--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,22 +17,19 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Set up Independencies for coverage report
+    - name: Set up environment
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install coverage
-      working-directory: ./mysite
-
-    # - name: Set up Node.js
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: '16'
+        docker-compose build
+        docker-compose up -d
+        docker-compose exec web python manage.py makemigrations
+        docker-compose exec web python manage.py migrate
+        docker-compose exec web python manage.py test web_cn
 
     - name: Generate coverage report
       run: |
-        coverage run manage.py test web_cn
-        coverage report
+        docker-compose exec web python manage.py test web_cn
+        # docker-compose exec web coverage run manage.py test web_cn
+        # docker-compose exec web coverage report
       working-directory: ./mysite
 
 
