--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,1 +1,43 @@
+name: CD
 
+on:[push]
+  # pull_request:
+  #   types: [closed]
+    # branches:
+    #   - main
+  
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Create kubeconfig directory
+      run: |
+        mkdir -p $HOME/.kube
+
+    - name: Set up kubeconfig
+      run: |
+        echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > $HOME/.kube/config
+
+    - name: Set up kubectl
+      run: |
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
+
+    - name: Build & Push latest image - mysite
+      run: |
+        docker build -t ghcr.io/chingching17/mysite:${GITHUB_SHA} .
+        echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u USERNAME --password-stdin
+        docker push ghcr.io/chingching17/mysite:${GITHUB_SHA}
+      working-directory: ./mysite
+
+    - name: Deploy to GKE
+      run: |
+        kubectl apply -f ./k8s/deploys.yaml
+        kubectl apply -f ./k8s/services.yaml
+        kubectl apply -f ./k8s/ingress.yaml
