--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -38,6 +38,7 @@ jobs:
 
     - name: Deploy to GKE
       run: |
+        kubectl delete pod,deploy,svc,ingress --all
         kubectl apply -f ./k8s/deploys.yaml
         kubectl apply -f ./k8s/services.yaml
         kubectl apply -f ./k8s/ingress.yaml
