--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -41,7 +41,13 @@ jobs:
         # kubectl delete pod,deploy,svc,ingress --all
         kubectl delete pods --all
         kubectl delete deployments --all
-        kubectl delete svc --all --selector='!component=kubernetes'
+        # kubectl delete svc --all --selector='!component=kubernetes'
+        kubectl get svc -o jsonpath='{range .items[*]}{.metadata.name}{"\n"}{end}'
+        for svc in $(kubectl get svc -o jsonpath='{range .items[*]}{.metadata.name}{"\n"}{end}'); do
+          if [ "$svc" != "kubernetes" ]; then
+            kubectl delete svc $svc
+          fi
+        done
         kubectl delete ingress --all
         kubectl apply -f ./k8s/deploys.yaml
         kubectl apply -f ./k8s/services.yaml
